add extra divs for ie map tab view

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -29,11 +29,12 @@
                                     <%= submit_tag("Load my map", :class => 'btn-success btn', :id => 'loadMap') %>
                                 </div>
                             </div>   
-                        <% end %>  
-                        <div id="map"><!-- Map inserts here --></div>
-                        <div id="mapinfo"> 
-
-                        <!-- post.js.erb puts the map contents here --> 
+                        <% end %> 
+                        <div> 
+                            <div id="map"><!-- Map inserts here --></div>
+                            <div id="mapinfo"> 
+                            <!-- post.js.erb puts the map contents here --> 
+                            </div>
                         </div>
                     </div>
                 </div>
