these will need to be squashed2

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -30,7 +30,8 @@
                                     <%= submit_tag("Load my map", :class => 'btn-success btn', :id => 'loadMap') %>
                                 </div>
                             </div>   
-                        <% end %>  
+                        <% end %> 
+                        <div id="map">Map inserts here</div> 
                         <div id="mapinfo"> 
                         <!-- post.js.erb puts the map contents here --> 
                         </div>
