add divs since ie map tab does not get mapinfo partial

--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -1,5 +1,4 @@
-<!-- //////////////// MAP ////////////////////// -->
-
+<div>
 
 <div id="map-controls">
     <input type="checkbox" id="firestations" name="firestations" checked="checked" />&nbsp;<label for="firestations" class="note">Show Fire Stations</label>
@@ -71,7 +70,7 @@
      <a href="http://www.texaswildfirerisk.com/Map" target="blank"> go to TxWRAP site</a>
      </p>
 </div>    
-
+</div>
 <script>
    var fire_stations = <%=raw @fs.to_json %>;
    var address_location = {lat: <%=@address.latlon.y %>, lon: <%=@address.latlon.x %>};
