--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -31,11 +31,13 @@
                                 </div>
                             </div>   
                         <% end %> 
+                        <div>
                         <div id="map">Map inserts here</div>
                         <br /> 
                         <div id="mapinfo"> 
                         <!-- post.js.erb puts the map contents here --> 
                         </div>
+                    </div>
                     </div>
                 </div>
 <!-- //////////////////// tasks ///////////////////////// -->        
