troubleshooting map view for ie

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -31,13 +31,10 @@
                                 </div>
                             </div>   
                         <% end %> 
-                        <div>
-                        <div id="map">Map inserts here</div>
-                        <br /> 
+                       <div id="map"></div>
                         <div id="mapinfo"> 
                         <!-- post.js.erb puts the map contents here --> 
                         </div>
-                    </div>
                     </div>
                 </div>
 <!-- //////////////////// tasks ///////////////////////// -->        
