--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -80,6 +80,8 @@ var verifyRedFlag;
 $(document).ready(function() {
 
 function setupMap() {
+    console.log(document.getElementById('map').innerHTML);
+    console.log('kljdfkgjsdfkgjsdkfj');
 
     // make a map, using normal leaflet and stamen toner tiles
     map = new L.Map('map', {maxZoom: 18});
