--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -52,7 +52,10 @@
                 <span class="note" id="remove-flags">hide red flag warnings info</span>
             </div>
         <li><h2>Weather</h2><hr></li>
-        <li class="condition-type">Wind: <span id="wind-conditions"><%= @wind_conditions %></li>
+        <li class="condition-type">Wind:
+            <span id="wind-conditions">
+            <%= @wind_conditions %></span>
+        </li>
         <li class="condition-type">Humidity:
             <span id="relative-humidity"> 
             <%= @relative_humidity %></span>
