--- a/app/views/resources/redflag.html.erb
+++ b/app/views/resources/redflag.html.erb
@@ -1,37 +1,37 @@
 <header class="jumbotron subhead" id="overview">
 <h1 class="center">Be on alert!</h1>
-        <p class="lead center">There is a high risk of wildfire today in your area.</p>
+        <p class="lead center">There is a high risk of wildfire today in your area. Here are some simple steps to get started.</p>
 </header>
 <div class="container-fluid">   
         <div class="span10 simplestep">   
             <hr></hr>
-            <h2>What should you do?</h2>
             <ol>
                 <li>
-                <h1>Don’t set anything on fire, seriously.</h1>
-                <p> If you smoke, don’t throw cigarette butts out the window or into the trash still lit. 
-                No BBQing - we suggest just going to Franklin’s, instead. 
-                Remember, there's always a burn ban within Austin city limits.
-                </p></li>
-                        <hr></hr>
+                    <h1>Don’t set anything on fire, seriously.</h1>
+                    <p> If you smoke, don’t throw cigarette butts out the window or into the trash still lit. 
+                    No BBQing - we suggest just going to Franklin’s, instead. 
+                    Remember, there's always a burn ban within Austin city limits.
+                    </p>
+                    <hr></hr>
+                </li>
                 <li>
                     <h1>Clear dry and/or flammable materials away from your house.</h1>
-                <p>Do a quick walk around your house, and keep an eye out for brush, dry leaves, or dead branches and make sure to move them away from your house. 
-                If you’re feeling friendly, do it for your neighbor’s house, too!</p>
+                    <p>Do a quick walk around your house, and keep an eye out for brush, dry leaves, or dead branches and make sure to move them away from your house. 
+                    If you’re feeling friendly, do it for your neighbor’s house, too!</p>
+                    <hr></hr>
                 </li>
-                        <hr></hr>
                 <li>
                     <h1>If you see something on fire, call it in. </h1>
-                <p>Don’t assume someone has already reported a fire if you see one &mdash; the fire department doesn’t mind getting lots of calls about one fire, but they can’t put it out if they don’t know about it. 
-                </p>
+                    <p>Don’t assume someone has already reported a fire if you see one &mdash; the fire department doesn’t mind getting lots of calls about one fire, but they can’t put it out if they don’t know about it. 
+                    </p>
+                    <hr></hr>
                 </li>
-                        <hr></hr>
             </ol>
         </div>
-            <ul>
-                <li>back to prepared.ly</li>
-                <li>tell me more about warnings</li>
-                <li>thanks, but I have more questions</li>
-                <li>don’t text me ever again, please.</li>
-            </ul>
+        <ul class="bottomlist">
+                <li><a href="/">back to prepared.ly</a></li>
+                <li><a href="http://www.weather.gov/" target="blank">tell me more about warnings</a></li>
+                <li><a href="http://prepared.ly/users/sign_up">thanks, but I have more questions</a></li>
+                <li><a href="http://prepared.ly/#notify-section">don’t text me ever again, please.</a></li>
+        </ul>
 </div>
