add back typekit and gsfn now that IE errors fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,16 +117,16 @@
   <a href="#" class="btn" data-dismiss="modal">Close</a>
   </div> 
 </div>
-<!-- <div id="getsat-widget-761"></div>
+ <div id="getsat-widget-761"></div>
 <script type="text/javascript" src="http://loader.engage.gsfn.us/loader.js"></script>
 <script type="text/javascript">
 if (typeof GSFN !== "undefined") { GSFN.loadWidget(761,{"containerId":"getsat-widget-761"}); }
-</script> -->
+</script> 
 
 
-<!-- Typekit 
+
 <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script> 
 
 <%= yield :javascript_yield %> 
 <%= javascript_include_tag "application" %>
