--- a/app/views/resources/redflag.html.erb
+++ b/app/views/resources/redflag.html.erb
@@ -1,34 +1,49 @@
 <header class="jumbotron subhead" id="overview">
-<h1 class="center">Be on alert!</h1>
-        <p class="lead center">There is a high risk of wildfire today in your area. Here are some simple steps to get started.</p>
+<h1 class="center"><img src="assets/preparedly-yellow.png">
+    <br>Be on alert!
+</h1>
+        <p class="lead center">There is a high risk of wildfire today in your area. <br>Here are some simple steps to get started.</p>
 </header>
-<div class="container-fluid">   
+<div class="container">   
+        <div class="dashed span10">
+        </div>
         <div class="span10 simplestep">   
-            <hr></hr>
-            <ol>
-                <li>
-                    <h1>Don’t set anything on fire, seriously.</h1>
-                    <p> If you smoke, don’t throw cigarette butts out the window or into the trash still lit. 
-                    No BBQing - we suggest just going to Franklin’s, instead. 
-                    Remember, there's always a burn ban within Austin city limits.
-                    </p>
-                    <hr></hr>
-                </li>
-                <li>
+                    <img src="assets/warning1.png">
                     <h1>Clear dry and/or flammable materials away from your house.</h1>
                     <p>Do a quick walk around your house, and keep an eye out for brush, dry leaves, or dead branches and make sure to move them away from your house. 
                     If you’re feeling friendly, do it for your neighbor’s house, too!</p>
-                    <hr></hr>
-                </li>
-                <li>
+        </div>
+        <div class="dashed span10">
+        </div>
+        <div class="span10 simplestep">   
+                    <img src="assets/warning2.png">
                     <h1>If you see something on fire, call it in. </h1>
                     <p>Don’t assume someone has already reported a fire if you see one &mdash; the fire department doesn’t mind getting lots of calls about one fire, but they can’t put it out if they don’t know about it. 
                     </p>
-                    <hr></hr>
-                </li>
-            </ol>
         </div>
-        <ul class="bottomlist">
+        <div class="dashed span10">
+        </div>
+                <div class="span10 simplestep">   
+                <img src="assets/warning3.png">
+                <h1>Don’t set anything on fire, seriously.</h1>
+                <p> 
+                <i>Remember, there's always a burn ban within Austin city limits.</i> 
+                </br>
+                <strong>Other than purposeful fires, here’s a few ways to <i>not</i> start a fire by accident:  </strong>
+                </p>
+                <ul class="nestedlist">
+                    <li>If you smoke, <strong>don’t throw cigarette butts</strong> out the window or into the trash still lit.</li>
+                    <li><strong>Don’t BBQ </strong> (we suggest just going to Franklin’s, instead.)
+                    If you smoke, don’t throw cigarette butts out the window or into the trash still lit. </li>
+                    <li><strong>Don’t park your car on top of grass.</strong> Catalytic converters are known for creating fires on the grass below. 
+                    </li>
+                    <li>Pulling a trailer with the chains touching the ground? Driving on a flat tire? Mowing your lawn? <strong>All of these things can cause sparks</strong> which will start fires.</li>
+                </ul>
+        </div>
+        <div class="dashed span10">
+        </div>
+        <ul class="bottomlist span10">
+                <li><a href="http://clicktotweet.com/aa928">Tweet this!</a></li>
                 <li><a href="/">back to prepared.ly</a></li>
                 <li><a href="http://www.weather.gov/" target="blank">tell me more about warnings</a></li>
                 <li><a href="http://prepared.ly/users/sign_up">thanks, but I have more questions</a></li>
