--- a/app/views/resources/redflag.html.erb
+++ b/app/views/resources/redflag.html.erb
@@ -49,4 +49,19 @@
                 <li><a href="http://prepared.ly/users/sign_up">thanks, but I have more questions</a></li>
                 <li><a href="http://prepared.ly/#notify-section">don’t text me ever again, please.</a></li>
         </ul>
+        <!-- AddThis Button BEGIN -->
+        <div class="bottomlist span10">
+            <h3>Share this page!</h3>
+            <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+            <a class="addthis_button_preferred_1"></a>
+            <a class="addthis_button_preferred_2"></a>
+            <a class="addthis_button_preferred_3"></a>
+            <a class="addthis_button_preferred_4"></a>
+            <a class="addthis_button_compact"></a>
+            <a class="addthis_counter addthis_bubble_style"></a>
+            </div>
+        </div>
+            <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+            <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-503328b6485b5ecd"></script>
+        <!-- AddThis Button END -->
 </div>
