customize AddThis share links with metatags for image, description, title

--- a/app/views/resources/redflag.html.erb
+++ b/app/views/resources/redflag.html.erb
@@ -52,7 +52,11 @@
         <!-- AddThis Button BEGIN -->
         <div class="bottomlist span10">
             <h3>Share this page!</h3>
-            <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+            <div class="addthis_toolbox addthis_default_style addthis_32x32_style"
+                addthis:url="http://prepared.ly/redflag"
+                addthis:title="Quick Tips from Prepared.ly for High Fire Danger Alert Days"
+                addthis:description="Remain proactive with these tips and find more at http://prepared.ly"
+                addthis:image="preparedly-bigblue.png">
             <a class="addthis_button_preferred_1"></a>
             <a class="addthis_button_preferred_2"></a>
             <a class="addthis_button_preferred_3"></a>
