tweaking the text on the alert page to be more general on line 1 and specific line 2

--- a/app/views/resources/alert.html.erb
+++ b/app/views/resources/alert.html.erb
@@ -2,7 +2,7 @@
 <h1 class="center"><img src="assets/preparedly-yellow.png">
     <br>Be on alert!
 </h1>
-        <p class="lead center">There is a high risk of wildfire in your area. <br>Here are some simple preventive steps to get started.</p>
+        <p class="lead center">There is a high risk of wildfire in the region. <br>Here are some simple preventive you can take.</p>
 </header>
 <div class="container">   
         <div class="dashed span10">
