add missing word on alert page, move google analytics code to head of layout files to ensure proper loading

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,17 @@
   <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 600px)" %>
   <!--this must be the last -->
   <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
+  <script>
+    var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30366897-1']);
+      _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 </head>
 <body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
 <!-- navbar content -->
