remove duplicate prevention step on alert page

--- a/app/views/resources/alert.html.erb
+++ b/app/views/resources/alert.html.erb
@@ -33,8 +33,7 @@
                 </p>
                 <ul class="nestedlist">
                     <li>If you smoke, <strong>don’t throw cigarette butts</strong> out the window or into the trash still lit.</li>
-                    <li><strong>Don’t BBQ </strong> (we suggest just going to Franklin’s, instead.)
-                    If you smoke, don’t throw cigarette butts out the window or into the trash still lit. </li>
+                    <li><strong>Don’t BBQ </strong> (we suggest just going to Franklin’s, instead.)</li>
                     <li><strong>Don’t park your car on top of grass.</strong> Catalytic converters are known for creating fires on the grass below. 
                     </li>
                     <li>Pulling a trailer with the chains touching the ground? Driving on a flat tire? Mowing your lawn? <strong>All of these things can cause sparks</strong> which will start fires.</li>
