make terms text color black since other css made it white

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,7 +110,7 @@
   </div>
   <div class="modal-body">
     <h4>Prepared.ly is a non-emergency wildfire preparedness tool.</h4><br> 
-    <p>Registration allows you to share prevention strategies with other users, contact wildfire prevention specialists, and receive infrequent <strong>non-emergency</strong> alerts about wildfire prevention in your area. Information entered on this site will be securely stored, and only used for the above purposes and to improve Prepared.ly. Changes to this policy will be posted here. By accessing and using Prepared.ly as a registered user or without registering, you acknowledge and agree to the above and any revisions.</p>
+    <p style="color:black;">Registration allows you to share prevention strategies with other users, contact wildfire prevention specialists, and receive infrequent <strong>non-emergency</strong> alerts about wildfire prevention in your area. Information entered on this site will be securely stored, and only used for the above purposes and to improve Prepared.ly. Changes to this policy will be posted here. By accessing and using Prepared.ly as a registered user or without registering, you acknowledge and agree to the above and any revisions.</p>
   </div>
   <div class="modal-footer">
     <a href="#" class="btn" data-dismiss="modal" >Close</a>
