additional text on red flag to check coverage

--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -120,7 +120,7 @@ function setupMap() {
             if(redflag){
                 // there was a red flag warning
                 //console.log("red flag");
-                var redflag = "Current warning, see link below";
+                var redflag = "Current warning, see link below for coverage detail";
                 $("#inside-redflag").html(redflag);
             }
             else{
