remove ajax loading gif since it caused problems when searching again on already loaded map; return json response of TFS risk before checking its length

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -25,7 +25,7 @@
                         <%= form_tag("/map", :id => "fetchaddress", :remote => true) do %>
                             <div class="controls">
                                 <div class="map-butt">
-                                    <p class="note">Please enter your street address or zip code. <i>To search again, please refresh the page.</i></p>
+                                    <p class="note">Please enter your street address or zip code.</p>
                                     <%= text_field_tag(:q, nil,  :value => @user.address, :class => 'address form-inline input-large') %>
                                     <%= submit_tag("Load my map", :class => 'btn-success btn', :id => 'loadMap') %>
                                 </div>
