switch geocoder back to google to comply with tos, add clarifying text for searching in the view, update map controller to handle google geocoder response

--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -11,7 +11,7 @@
         <li class="condition-type">Risk of this location:  
             <span class="risk risk-<%= @risk_level %>" id="risk-text"><%= @risk_text %></span>
         </li>
-        <li class="condition-type">Inside of a countywide burn ban:
+        <li class="condition-type">Inside of a TX countywide burn ban:
             <span class="condition" id="inside-burnban"><%= @inside_burnban %></span>
         </li>
         <li class="note" id="bans-trigger"><u>About burn bans</u></li>
