--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -49,7 +49,7 @@
                         <%= form_tag("/map", :id => "fetchaddress", :remote => true) do %>
                             <div class="controls">
                                 <div class="map-butt">
-                                    <p class="note">Please enter and confirm your address, then click "Load my map."</p>
+                                    <p class="note">For best results, please enter and select a street address. Then click "Load my map."</p>
                                     <%= text_field_tag(:q, nil,  :value => @user.address, :class => 'address form-inline input-large') %>
                                     <%= submit_tag("Load my map", :class => 'btn-success btn', :id => 'loadMap') %>
                                     <img src="assets/powered-by-google-on-white.png" align="left" />
