change text to 'estimated risk' from 'risk'

--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -8,7 +8,7 @@
     <h4 id="address"><%= @address.address %></h4>
     <hr>
     <ul>
-        <li class="condition-type">Risk of this location:  
+        <li class="condition-type">Estimated risk of this location:  
             <span class="risk risk-<%= @risk_level %>" id="risk-text"><%= @risk_text %></span>
         </li>
         <li class="condition-type">Inside of a TX countywide burn ban:
